# wopl-textconv

./: CMakeLists.txt  README.md
src/: textconv.cc  textconv.h  wopx_file.h
